# RAG_Haystack_Chatbot

./: .gitignore  Dockerfile  README.md  chainlit.md  pipeline.yaml  pyproject.toml  requirements.txt  setup-espanol.md  setup.md
docs/: Pipeline_Process_Presentation.odp
src/app/: app.py
src/etl/: extract.py  wrangle.ipynb
src/notebooks/: RAG Pipeline.ipynb
